# fx-pricing

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json
.claude/: settings.local.json
.cursor/: rules.md  skills.md
.github/workflows/: ci.yml
.specs-fire/: state.yaml
.specsmd/: manifest.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_fx_tables.py
backend/app/: config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routers/: prices.py  reference.py  ws_prices.py
backend/app/api/schemas/: prices.py  reference.py
backend/app/domain/: business_day.py  calendar.py  conventions.py  date_generation.py  exceptions.py  market_data.py  types.py
backend/app/infrastructure/: __init__.py  database.py  models.py
backend/app/infrastructure/cache/: __init__.py  price_cache.py
backend/app/infrastructure/providers/: __init__.py  base.py  yahoo_finance.py
backend/app/infrastructure/repositories/: __init__.py  calendar_repository.py  convention_repository.py
backend/scripts/: seed.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_reference.py  test_prices_api.py  test_ws_prices.py
backend/tests/unit/: test_market_data_domain.py  test_models.py  test_price_cache.py  test_repositories.py  test_yahoo_finance_provider.py
backend/tests/unit/domain/: test_business_day.py  test_calendar.py  test_conventions.py  test_date_generation.py  test_types.py
frontend/: .npmrc  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  theme.config.ts  vite.config.ts
(+153 files in other folders)
